# linkr-bot

./: .env.example  README.md  main.py  pyproject.toml
src/backend/: __init__.py  distributor.py
src/bot/: bot.py
src/cogs/: logging.py
src/utils/: __init__.py  database.py  models.py
static/: init.sql
